# dotfiles

./: NetrwTreeListing
.config/nvim/: init.lua  settings.vim  test.cpp  test.js
aerospace/: .aerospace.toml
alacritty/: .alacritty.toml
alacritty/.config/alacritty/: alacritty.toml
clang/: .clang-tidy
clang/config/: .clang-tidy
cmake_template/: CMakeLists.txt  CMakePresets.json
cmake_template/src/: main.cpp
cursor/: keybindings.json  settings.json
ghostty/.config/ghostty/: config
ideavim/: .ideavimrc
kitty/.config/kitty/: kitty.conf  theme.conf
nvim/: lazy-lock.json
nvim/.config/nvim/: init.lua  lazy-lock.json  lazy-lock_BACKUP_1713491.json  lazy-lock_LOCAL_1713491.json  lazy-lock_REMOTE_1713491.json  lazyvim.json
nvim/lua/config/: lazy.lua  options.lua
nvim/lua/plugins/: example.lua  harpoon.lua  symbols-outline.lua  theme.lua
other_scripts/: update_jai_beta.sh  update_vulkan_sdk.sh
scripts/: dconf_set.sh  font_setup.sh  setup.sh  startup_apps.sh
scripts/.scripts/.init_scripts/: init_dotfiles.sh  init_zsh.sh  install_lazygit.sh  install_yazi.sh  set_git.sh  set_wayland_gdm.sh  test.sh  vulkan.sh
scripts/.scripts/init/: dconf_set.sh  init.sh  init_keybinds.sh  init_vim.sh  install_alacritty.sh  install_node.sh  install_nvim.sh  install_popshell.sh  (+1 more)
scripts/init_scripts/: init.sh  install_chrome.sh  install_llvm.sh  install_tmux.sh  set_gcc.sh  ssh_gen.sh
tmux/: .tmux.conf
vim/: .vimrc
vscode/: keybindings.json  keybindings2.json  settings.json  settings2.json
vsvim/: .vsvimrc
zsh/: .profile  .zprofile  .zshrc  .zshrc_basic
(+87 files in other folders)
